[gd_scene load_steps=11 format=2]

[ext_resource path="res://menu.gd" type="Script" id=1]
[ext_resource path="res://inter.jpg" type="Texture" id=2]
[ext_resource path="res://fonts/Exo2-VariableFont_wght.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://fonts/RocknRollOne-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 50
outline_size = 3
outline_color = Color( 0.752941, 0.65098, 0.0901961, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.858824, 0.843137, 0.843137, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 0.992157, 0.992157, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.745098, 0.690196, 0.219608, 1 )
corner_detail = 10

[sub_resource type="DynamicFont" id=6]
size = 17
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="menu" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="TextureRect" parent="."]
margin_left = -200.112
margin_top = -337.413
margin_right = 1719.89
margin_bottom = 862.587
rect_pivot_offset = Vector2( 190, 338 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="biodata" type="Label" parent="."]
margin_left = 580.727
margin_top = 481.671
margin_right = 974.727
margin_bottom = 638.671
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.992157, 0.984314, 0.984314, 1 )
custom_colors/font_color_shadow = Color( 0.647059, 0.588235, 0.0901961, 1 )
text = "Mohammad Rizky Maulidhan
191524049
D4-2B
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="Label" parent="."]
margin_left = 134.101
margin_top = 40.4142
margin_right = 450.101
margin_bottom = 113.414
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "main menu"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button1" type="Button" parent="."]
light_mask = -2147483648
margin_left = 56.0
margin_top = 178.625
margin_right = 269.0
margin_bottom = 241.625
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Line Generation 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button2" type="Button" parent="."]
light_mask = -2147483648
margin_left = 57.1798
margin_top = 271.804
margin_right = 270.18
margin_bottom = 334.804
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Line Generation 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button3" type="Button" parent="."]
light_mask = -2147483648
margin_left = 53.0
margin_top = 370.607
margin_right = 266.0
margin_bottom = 433.607
rect_pivot_offset = Vector2( 81.3848, 31.5 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Shape"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button4" type="Button" parent="."]
light_mask = -2147483648
margin_left = 294.0
margin_top = 179.212
margin_right = 507.0
margin_bottom = 242.212
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Circle"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button5" type="Button" parent="."]
light_mask = -2147483648
margin_left = 292.005
margin_top = 273.391
margin_right = 505.005
margin_bottom = 336.391
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Smiley"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button6" type="Button" parent="."]
light_mask = -2147483648
margin_left = 292.0
margin_top = 369.607
margin_right = 505.0
margin_bottom = 432.607
rect_pivot_offset = Vector2( 81.3848, 31.5 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Logo"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="button1" to="." method="_on_button1_pressed"]
[connection signal="pressed" from="button2" to="." method="_on_button2_pressed"]
[connection signal="pressed" from="button3" to="." method="_on_button3_pressed"]
[connection signal="pressed" from="button4" to="." method="_on_button4_pressed"]
[connection signal="pressed" from="button5" to="." method="_on_button5_pressed"]
[connection signal="pressed" from="button6" to="." method="_on_button6_pressed"]
